--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learning node js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/HosseinHeydarpour/node-js-bootcamp/issues"
   },
-  "homepage": "https://github.com/HosseinHeydarpour/node-js-bootcamp#readme"
+  "homepage": "https://github.com/HosseinHeydarpour/node-js-bootcamp#readme",
+  "dependencies": {
+    "slugify": "^1.6.6"
+  }
 }
