--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/HosseinHeydarpour/node-js-bootcamp#readme",
   "dependencies": {
-    "slugify": "^1.6.6"
+    "slugify": "~1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
